--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
     body{margin:0;font-family:Inter,ui-sans-serif,system-ui,Segoe UI,Roboto,Helvetica,Arial; background:linear-gradient(180deg,#071025 0%, #071025 60%, #071030 100%);color:#e6eef8;display:flex;align-items:center;justify-content:center;min-height:100vh;padding:24px}
     .wrap{width:100%;max-width:920px}
     header{display:flex;align-items:center;gap:18px}
-    .logo{width:84px;height:84px;flex:0 0 84px;border-radius:12px;background:linear-gradient(135deg,var(--accent),#60a5fa);display:grid;place-items:center;color:#04273a;font-weight:700;font-size:22px}
+    .logo-img{width:84px;height:84px;flex:0 0 84px;border-radius:12px;object-fit:contain;background:#0b1220}
     h1{margin:0;font-size:28px;letter-spacing:1px}
     .card{background:rgba(255,255,255,0.02);border:1px solid rgba(255,255,255,0.03);padding:18px;border-radius:12px;margin-top:18px}
     .placeholder{width:100%;height:260px;border-radius:10px;display:grid;place-items:center;background:linear-gradient(90deg,#0b1220,#071025);border:1px dashed rgba(255,255,255,0.03);}
-    .placeholder svg{width:60%;max-width:420px;opacity:0.9}
     .names{margin:14px 0 0;padding:0;list-style:none;display:grid;gap:8px}
     .names li{padding:10px 12px;background:linear-gradient(90deg, rgba(255,255,255,0.01), rgba(255,255,255,0.008));border-radius:8px;border:1px solid rgba(255,255,255,0.02);display:flex;align-items:center;gap:12px}
     .avatar{width:36px;height:36px;border-radius:8px;background:linear-gradient(135deg,#1e293b,#0b1220);display:inline-grid;place-items:center;font-weight:600;color:var(--accent)}
     footer{margin-top:14px;color:var(--muted);font-size:13px}
-    @media (max-width:540px){header{flex-direction:column;align-items:flex-start}.logo{width:64px;height:64px;font-size:18px}}
+    @media (max-width:540px){header{flex-direction:column;align-items:flex-start}.logo-img{width:64px;height:64px}}
   </style>
 </head>
 <body>
   <div class="wrap">
     <header>
-      <div class="logo">H3LPS</div>
+      <img src="h3lplogo.jpg" alt="H3LPS logo" class="logo-img" />
       <div>
         <h1>H3LPS</h1>
         <div style="color:var(--muted);font-size:14px">Company — placeholder one-page site</div>
@@ -33,35 +32,17 @@
     </header>
 
     <div class="card">
-      <div class="placeholder" role="img" aria-label="Placeholder image for H3LPS">
-        <!-- Inline SVG placeholder so the page is self-contained -->
-        <svg viewBox="0 0 800 360" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
-          <defs>
-            <linearGradient id="g" x1="0" x2="1">
-              <stop offset="0" stop-color="#0ea5e9" stop-opacity="0.18" />
-              <stop offset="1" stop-color="#60a5fa" stop-opacity="0.06" />
-            </linearGradient>
-          </defs>
-          <rect width="800" height="360" rx="14" fill="#041026" />
-          <rect x="40" y="36" width="720" height="288" rx="10" fill="url(#g)" />
-          <g fill="#cfeefe" font-family="Inter,Arial" font-weight="600" font-size="36">
-            <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle">H3LPS — placeholder image</text>
-          </g>
-        </svg>
-      </div>
+      <div class="placeholder" role="img" aria-label="Placeholder image for H3LPS"></div>
 
-      <h3 style="margin:18px 0 8px">Team / Names</h3>
-      <!-- Edit the list below to add or remove names -->
+      <h3 style="margin:18px 0 8px">Team</h3>
       <ul class="names">
-        <li><div class="avatar">AS</div><div>Alice Smith — Founder</div></li>
-        <li><div class="avatar">BJ</div><div>Bob Johnson — Product</div></li>
-        <li><div class="avatar">CL</div><div>Carol Lee — Engineering</div></li>
-        <li><div class="avatar">DK</div><div>David Kim — Design</div></li>
+        <li><div class="avatar">BG</div><div>Ben Gulezian — Founder | Electrical Engineer</div></li>
+        <li><div class="avatar">DF</div><div>Dario Finocchiaro — Software Engineer</div></li>
+        <li><div class="avatar">MG</div><div>Maxwell Gleadow — Electrical Engineer</div></li>
       </ul>
 
-      <footer>Tip: open this file in a text editor to change the title, placeholder image, or the names list.</footer>
+      <footer>You can edit this file to change the placeholder image, names, or theme.</footer>
     </div>
   </div>
 </body>
 </html>
-
