--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     
     <header>
       <div class="logo-container">
-        <img src="h3lplogo.jpg" alt="H3LPS Logo" class="logo-img" />
+        <img src="h3lplogo.JPG" alt="H3LPS Logo" class="logo-img" />
       </div>
       
       <h1>H3LPS</h1>
