--- a/index.html
+++ b/index.html
@@ -50,20 +50,6 @@
       align-items: center;
     }
 
-    .logo-container {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      background: var(--card-bg);
-      border: 1px solid rgba(153, 156, 139, 0.3);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 24px;
-      box-shadow: 0 0 30px rgba(153, 156, 139, 0.1);
-      overflow: hidden;
-    }
-
     .logo-img {
       width: 100%;
       height: 100%;
@@ -184,8 +170,7 @@
   <div class="container">
     
     <header>
-      <div class="logo-container">
-        <img src="h3lplogo.JPG" alt="H3LPS Logo" class="logo-img" />
+        <img src="h3lpslogo.JPG" alt="H3LPS Logo" class="logo-img" />
       </div>
       
       <h1>H3LPS</h1>
