--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     :root {
       --brand: #b8ccc4;          /* Main color theme */
-      --bg: #eef5f3;             /* Very light background */
+      --bg: #cbdcd7;             /* Very light background */
       --card-bg: #ffffff;        /* White cards */
       --text-main: #2a2a2a;      /* Soft dark gray for readability (not black) */
       --text-muted: #6b6b6b;
