--- a/index.html
+++ b/index.html
@@ -127,7 +127,12 @@
       letter-spacing: 1px;
     }
 
-  </style>
+    .logo-text {
+      width: 200px; /* adjust size here */
+      margin-top: 10px;
+      height: auto;
+    }
+</style>
 </head>
 
 <body>
