--- a/index.html
+++ b/index.html
@@ -159,19 +159,19 @@
 
           <div class="member-card">
             <div class="member-name">Ben Gulezian</div>
-            <div class="member-role">Founder | Electrical Engineer</div>
+            <div class="member-role">Founder</div>
             <div class="member-link"><a href="https://www.linkedin.com/in/bengulezian/" target="_blank">LinkedIn</a></div>
           </div>
 
           <div class="member-card">
             <div class="member-name">Dario Finocchiaro</div>
-            <div class="member-role">Software Engineer</div>
+            <div class="member-role">Lead Software Engineer</div>
             <div class="member-link"><a href="https://github.com/Dariop8/Robotics-2-project-Dynamic-identification-of-a-robot-with-visco-elastic-joints" target="_blank">Project Link</a></div>
           </div>
 
           <div class="member-card">
             <div class="member-name">Maxwell Gleadow</div>
-            <div class="member-role">Electrical Engineer</div>
+            <div class="member-role">Lead Electrical Engineer</div>
             <div class="member-link"><a href="https://www.linkedin.com/in/maxwell-gleadow/" target="_blank">LinkedIn</a></div>
           </div>
 
