--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     }
 
     .logo-text {
-      width: 250px; /* adjust size here */
+      width: 200px; /* adjust size here */
       margin-top: 10px;
       height: auto;
     }
@@ -152,6 +152,11 @@
         </p>
       </div>
 
+      <div class="offer-section" style="margin-bottom:60px; text-align:center;">
+        <div style="font-size:1rem; text-transform:uppercase; letter-spacing:3px; color:#ffffff; font-weight:700; margin-bottom:10px;">What We Offer</div>
+        <div style="font-size:1.1rem; color:var(--text-muted);">Coming Soon</div>
+      </div>
+
       <div class="team-section">
         <div class="section-title">Our Team</div>
 
@@ -159,24 +164,39 @@
 
           <div class="member-card">
             <div class="member-name">Ben Gulezian</div>
-            <div class="member-role">Founder</div>
+            <div class="member-role">Founder | Electrical Engineer</div>
             <div class="member-link"><a href="https://www.linkedin.com/in/bengulezian/" target="_blank">LinkedIn</a></div>
           </div>
 
           <div class="member-card">
             <div class="member-name">Dario Finocchiaro</div>
-            <div class="member-role">Lead Software Engineer</div>
+            <div class="member-role">Software Engineer</div>
             <div class="member-link"><a href="https://github.com/Dariop8/Robotics-2-project-Dynamic-identification-of-a-robot-with-visco-elastic-joints" target="_blank">Project Link</a></div>
           </div>
 
           <div class="member-card">
             <div class="member-name">Maxwell Gleadow</div>
-            <div class="member-role">Lead Electrical Engineer</div>
+            <div class="member-role">Electrical Engineer</div>
             <div class="member-link"><a href="https://www.linkedin.com/in/maxwell-gleadow/" target="_blank">LinkedIn</a></div>
           </div>
 
         </div>
       </div>
+          <div class="testimonials-section" style="margin-top:60px; text-align:center;">
+        <div style="font-size:1rem; text-transform:uppercase; letter-spacing:3px; color:#ffffff; font-weight:700; margin-bottom:10px;">Testimonials</div>
+        <div style="font-size:1.1rem; color:var(--text-muted);">Coming Soon</div>
+      </div>
+
+      <div class="our-work-section" style="margin-top:60px; text-align:center;">
+        <div style="font-size:1rem; text-transform:uppercase; letter-spacing:3px; color:#ffffff; font-weight:700; margin-bottom:10px;">Our Work</div>
+        <div style="font-size:1.1rem; color:var(--text-muted);">Coming Soon</div>
+      </div>
+
+      <div class="contact-section" style="margin-top:60px; text-align:center;">
+        <div style="font-size:1rem; text-transform:uppercase; letter-spacing:3px; color:#ffffff; font-weight:700; margin-bottom:10px;">Contact Us</div>
+        <div style="font-size:1.1rem; color:var(--text-main);">h3lpsco@gmail.com</div>
+      </div>
+
     </main>
 
     <footer>
