--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     :root {
       --brand: #b8ccc4;
-      --bg: #d9e6e2; /* Slightly darker background */
+      --bg: #a0b9b0; /* Slightly darker background */
       --card-bg: #ffffff;
       --text-main: #2a2a2a;
       --text-muted: #6b6b6b;
