--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     :root {
       --brand: #b8ccc4;
-      --bg: #a0b9b0; /* Slightly darker background */
+      --bg: #a0b9b0;
       --card-bg: #ffffff;
       --text-main: #2a2a2a;
       --text-muted: #6b6b6b;
@@ -47,7 +47,11 @@
       margin-bottom: 10px;
     }
 
-    /* Removed subtitle "Company" */
+    .logo-text {
+      width: 200px;
+      margin-top: 10px;
+      height: auto;
+    }
 
     /* ---- DESCRIPTION ---- */
     .description-box {
@@ -58,12 +62,7 @@
       font-size: 1.1rem;
     }
 
-    /* ---- TEAM SECTION ---- */
-    .team-section {
-      text-align: left;
-      margin-bottom: 60px;
-    }
-
+    /* ---- SECTION TITLE ---- */
     .section-title {
       font-size: 1rem;
       text-transform: uppercase;
@@ -74,6 +73,12 @@
       padding-bottom: 6px;
       font-weight: 700;
       display: inline-block;
+    }
+
+    /* ---- TEAM SECTION ---- */
+    .team-section {
+      text-align: left;
+      margin-bottom: 60px;
     }
 
     .team-grid {
@@ -119,6 +124,65 @@
       text-decoration: underline;
     }
 
+    /* ---- PRODUCT CAROUSEL ---- */
+    .product-card {
+      max-width: 500px;
+      margin: 0 auto;
+      background: var(--card-bg);
+      border: 2px solid var(--brand);
+      border-radius: 14px;
+      padding: 20px;
+      box-shadow: 0px 4px 10px rgba(0,0,0,0.05);
+    }
+
+    .carousel {
+      position: relative;
+      overflow: hidden;
+      border-radius: 12px;
+    }
+
+    .carousel-track {
+      display: flex;
+      transition: transform 0.4s ease;
+    }
+
+    .carousel img {
+      width: 100%;
+      flex-shrink: 0;
+    }
+
+    .carousel-dots {
+      display: flex;
+      justify-content: center;
+      margin-top: 10px;
+      gap: 8px;
+    }
+
+    .carousel-dots button {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      border: none;
+      background: #cfcfcf;
+      cursor: pointer;
+    }
+
+    .carousel-dots button.active {
+      background: var(--brand);
+    }
+
+    .product-title {
+      font-weight: 700;
+      font-size: 1.2rem;
+      margin: 16px 0 8px;
+    }
+
+    .product-desc {
+      font-size: 0.95rem;
+      color: var(--text-muted);
+      line-height: 1.5;
+    }
+
     footer {
       margin-top: 60px;
       font-size: 0.75rem;
@@ -126,17 +190,10 @@
       text-transform: uppercase;
       letter-spacing: 1px;
     }
-
-    .logo-text {
-      width: 200px; /* adjust size here */
-      margin-top: 10px;
-      height: auto;
-    }
-</style>
+  </style>
 </head>
 
 <body>
-
   <div class="container">
 
     <header>
@@ -145,6 +202,7 @@
     </header>
 
     <main>
+
       <div class="description-box">
         <p>
           A Rhode Island-based tech business aiding caregivers with their everyday struggles.<br><br>
@@ -152,49 +210,86 @@
         </p>
       </div>
 
-      <div class="offer-section" style="margin-bottom:60px; text-align:center;">
-        <div style="font-size:1rem; text-transform:uppercase; letter-spacing:3px; color:#ffffff; font-weight:700; margin-bottom:10px;">What We Offer</div>
+      <!-- WHAT WE OFFER -->
+      <div style="margin-bottom:60px; text-align:center;">
+        <div class="section-title">What We Offer</div>
         <div style="font-size:1.1rem; color:var(--text-muted);">Coming Soon</div>
       </div>
 
+      <!-- OUR TEAM -->
       <div class="team-section">
         <div class="section-title">Our Team</div>
 
         <div class="team-grid">
-
           <div class="member-card">
             <div class="member-name">Ben Gulezian</div>
             <div class="member-role">Founder</div>
-            <div class="member-link"><a href="https://www.linkedin.com/in/bengulezian/" target="_blank">LinkedIn</a></div>
+            <div class="member-link">
+              <a href="https://www.linkedin.com/in/bengulezian/" target="_blank">LinkedIn</a>
+            </div>
           </div>
 
           <div class="member-card">
             <div class="member-name">Dario Finocchiaro</div>
             <div class="member-role">Lead Software Engineer</div>
-            <div class="member-link"><a href="https://github.com/Dariop8/Robotics-2-project-Dynamic-identification-of-a-robot-with-visco-elastic-joints" target="_blank">Project Link</a></div>
+            <div class="member-link">
+              <a href="https://github.com/Dariop8/Robotics-2-project-Dynamic-identification-of-a-robot-with-visco-elastic-joints" target="_blank">
+                Project Link
+              </a>
+            </div>
           </div>
 
           <div class="member-card">
             <div class="member-name">Maxwell Gleadow</div>
             <div class="member-role">Lead Electrical Engineer</div>
-            <div class="member-link"><a href="https://www.linkedin.com/in/maxwell-gleadow/" target="_blank">LinkedIn</a></div>
+            <div class="member-link">
+              <a href="https://www.linkedin.com/in/maxwell-gleadow/" target="_blank">LinkedIn</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- TESTIMONIALS -->
+      <div style="margin-top:60px; text-align:center;">
+        <div class="section-title">Testimonials</div>
+        <div style="font-size:1.1rem; color:var(--text-muted);">Coming Soon</div>
+      </div>
+
+      <!-- OUR WORK -->
+      <div style="margin-top:60px; text-align:center;">
+        <div class="section-title">Our Work</div>
+
+        <div class="product-card">
+
+          <div class="carousel" id="doorCarousel">
+            <div class="carousel-track">
+              <img src="doorsens1.png" alt="Door Sensor Image 1">
+              <img src="doorsens2.png" alt="Door Sensor Image 2">
+              <img src="doorsens2.png" alt="Door Sensor Image 3">
+            </div>
+          </div>
+
+          <div class="carousel-dots" id="doorDots">
+            <button class="active"></button>
+            <button></button>
+            <button></button>
+          </div>
+
+          <div class="product-title">Door Sensor</div>
+          <div class="product-desc">
+            A modular door sensor with a multitude of ways to alert about door usage
+            i.e sound alert, light blink alert, phone alert.
           </div>
 
         </div>
       </div>
-          <div class="testimonials-section" style="margin-top:60px; text-align:center;">
-        <div style="font-size:1rem; text-transform:uppercase; letter-spacing:3px; color:#ffffff; font-weight:700; margin-bottom:10px;">Testimonials</div>
-        <div style="font-size:1.1rem; color:var(--text-muted);">Coming Soon</div>
-      </div>
 
-      <div class="our-work-section" style="margin-top:60px; text-align:center;">
-        <div style="font-size:1rem; text-transform:uppercase; letter-spacing:3px; color:#ffffff; font-weight:700; margin-bottom:10px;">Our Work</div>
-        <div style="font-size:1.1rem; color:var(--text-muted);">Coming Soon</div>
-      </div>
-
-      <div class="contact-section" style="margin-top:60px; text-align:center;">
-        <div style="font-size:1rem; text-transform:uppercase; letter-spacing:3px; color:#ffffff; font-weight:700; margin-bottom:10px;">Contact Us</div>
-        <div style="font-size:1.1rem; color:var(--text-main);">h3lpsco@gmail.com</div>
+      <!-- CONTACT -->
+      <div style="margin-top:60px; text-align:center;">
+        <div class="section-title">Contact Us</div>
+        <div style="font-size:1.1rem; color:var(--text-main);">
+          h3lpsco@gmail.com
+        </div>
       </div>
 
     </main>
@@ -202,8 +297,40 @@
     <footer>
       &copy; 2025 H3LPS. All Rights Reserved.
     </footer>
-
   </div>
+
+  <script>
+    const track = document.querySelector('#doorCarousel .carousel-track');
+    const dots = document.querySelectorAll('#doorDots button');
+    let index = 0;
+
+    function updateCarousel() {
+      track.style.transform = `translateX(-${index * 100}%)`;
+      dots.forEach((dot, i) =>
+        dot.classList.toggle('active', i === index)
+      );
+    }
+
+    dots.forEach((dot, i) => {
+      dot.addEventListener('click', () => {
+        index = i;
+        updateCarousel();
+      });
+    });
+
+    let startX = 0;
+
+    track.addEventListener('touchstart', e => {
+      startX = e.touches[0].clientX;
+    });
+
+    track.addEventListener('touchend', e => {
+      const endX = e.changedTouches[0].clientX;
+      if (startX - endX > 50 && index < dots.length - 1) index++;
+      if (endX - startX > 50 && index > 0) index--;
+      updateCarousel();
+    });
+  </script>
 
 </body>
 </html>
