--- a/index.html
+++ b/index.html
@@ -266,6 +266,13 @@
               <img src="doorsens1.png" alt="Door Sensor Image 1">
               <img src="doorsens2.png" alt="Door Sensor Image 2">
               <img src="doorsens3.png" alt="Door Sensor Image 3">
+              <video
+                src="doorsensexpl.mp4"
+                autoplay
+                loop
+                muted
+                playsinline
+              ></video>
             </div>
           </div>
 
