--- a/index.html
+++ b/index.html
@@ -146,10 +146,14 @@
       transition: transform 0.4s ease;
     }
 
-    .carousel img {
+    .carousel img,
+    .carousel video {
       width: 100%;
       flex-shrink: 0;
+      display: block;
+      border-radius: 10px;
     }
+
 
     .carousel-dots {
       display: flex;
@@ -280,6 +284,7 @@
             <button class="active"></button>
             <button></button>
             <button></button>
+            <button></button>
           </div>
 
           <div class="product-title">Door Sensor</div>
@@ -312,11 +317,22 @@
     let index = 0;
 
     function updateCarousel() {
-      track.style.transform = `translateX(-${index * 100}%)`;
-      dots.forEach((dot, i) =>
-        dot.classList.toggle('active', i === index)
-      );
-    }
+  track.style.transform = `translateX(-${index * 100}%)`;
+
+  dots.forEach((dot, i) =>
+    dot.classList.toggle('active', i === index)
+  );
+
+  // Pause all videos
+  track.querySelectorAll('video').forEach(video => video.pause());
+
+  // Play active video
+  const activeSlide = track.children[index];
+  if (activeSlide.tagName === 'VIDEO') {
+    activeSlide.play();
+  }
+}
+
 
     dots.forEach((dot, i) => {
       dot.addEventListener('click', () => {
