--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@
 
       <div class="description-box">
         <p>
-          A New England-based tech business aiding caregivers with their everyday struggles.
+          Because care deserves care.
         </p>
       </div>
 
       <div style="margin-bottom:60px; text-align:center;">
         <div class="section-title">What We Offer</div>
         <div style="font-size:1.1rem; color:var(--text-main); max-width: 600px; margin: 0 auto; line-height: 1.5;">
-          Tailored low cost tech solutions to aid caregiving businesses for their everyday needs.
+          Tailored low cost tech solutions to aid caregiving businesses with their everyday needs.
         </div>
       </div>
 
@@ -249,6 +249,8 @@
           <div class="member-card">
             <div class="member-name">Sky Laurent-Kingsley</div>
             <div class="member-role">Chief Officer of Operations & Marketing</div>
+            <div class="member-link">
+              <a href="https://www.linkedin.com/in/sky-laurent-kingsley/" target="_blank">LinkedIn</a>
           </div>
 
           <div class="member-card">
@@ -262,6 +264,8 @@
           <div class="member-card">
             <div class="member-name">Trevor Gusmini</div>
             <div class="member-role">Head of Business Management</div>
+            <div class="member-link">
+              <a href="https://www.linkedin.com/in/trevor-gusmini/" target="_blank">LinkedIn</a>
           </div>
 
           <div class="member-card">
@@ -277,6 +281,8 @@
           <div class="member-card">
             <div class="member-name">Denilo Semedo</div>
             <div class="member-role">Lead Robotics Engineer</div>
+            <div class="member-link">
+              <a href="https://www.linkedin.com/in/denilo-semedo/" target="_blank">LinkedIn</a>
           </div>
 
           <div class="member-card">
@@ -287,11 +293,15 @@
           <div class="member-card">
             <div class="member-name">Omar Dovesi</div>
             <div class="member-role">Lead Machine Learning Engineer</div>
+            <div class="member-link">
+              <a href="https://www.linkedin.com/in/omardovesi/" target="_blank">LinkedIn</a>
           </div>
 
           <div class="member-card">
             <div class="member-name">Joey Musalli</div>
             <div class="member-role">Lead Mechanical Engineer</div>
+            <div class="member-link">
+              <a href="https://www.linkedin.com/in/jmussalli/" target="_blank">LinkedIn</a>
           </div>
 
           <div class="member-card">
