--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
       box-shadow: 0px 6px 14px rgba(0,0,0,0.08);
     }
 
+    /* Added style for the member image */
+    .member-img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin: 0 auto 10px;
+      border: 2px solid var(--brand);
+    }
+    
     .member-name {
       font-weight: 700;
       font-size: 1.1rem;
@@ -223,7 +233,7 @@
 
       <div class="description-box">
         <p>
-          Because care deserves care.
+          A New England-based tech business aiding caregivers with their everyday struggles.
         </p>
       </div>
 
@@ -239,6 +249,7 @@
 
         <div class="team-grid">
           <div class="member-card">
+            <img src="ben.png" alt="Benjamin Gulezian" class="member-img">
             <div class="member-name">Benjamin Gulezian</div>
             <div class="member-role">Founder</div>
             <div class="member-link">
@@ -251,6 +262,7 @@
             <div class="member-role">Chief Officer of Operations & Marketing</div>
             <div class="member-link">
               <a href="https://www.linkedin.com/in/sky-laurent-kingsley/" target="_blank">LinkedIn</a>
+            </div>
           </div>
 
           <div class="member-card">
@@ -266,6 +278,7 @@
             <div class="member-role">Head of Business Management</div>
             <div class="member-link">
               <a href="https://www.linkedin.com/in/trevor-gusmini/" target="_blank">LinkedIn</a>
+            </div>
           </div>
 
           <div class="member-card">
@@ -283,6 +296,7 @@
             <div class="member-role">Lead Robotics Engineer</div>
             <div class="member-link">
               <a href="https://www.linkedin.com/in/denilo-semedo/" target="_blank">LinkedIn</a>
+            </div>
           </div>
 
           <div class="member-card">
@@ -295,6 +309,7 @@
             <div class="member-role">Lead Machine Learning Engineer</div>
             <div class="member-link">
               <a href="https://www.linkedin.com/in/omardovesi/" target="_blank">LinkedIn</a>
+            </div>
           </div>
 
           <div class="member-card">
@@ -302,6 +317,7 @@
             <div class="member-role">Lead Mechanical Engineer</div>
             <div class="member-link">
               <a href="https://www.linkedin.com/in/jmussalli/" target="_blank">LinkedIn</a>
+            </div>
           </div>
 
           <div class="member-card">
