--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
       <div class="description-box">
         <p>
-          A New England-based tech business aiding caregivers with their everyday struggles.
+          *Because care deserves care.*
         </p>
       </div>
 
