--- a/index.html
+++ b/index.html
@@ -274,10 +274,11 @@
           </div>
 
           <div class="member-card">
+            <img src="trev.png" alt="Trevor Gusmini" class="member-img">
             <div class="member-name">Trevor Gusmini</div>
             <div class="member-role">Head of Business Management</div>
             <div class="member-link">
-              <a href="https://www.linkedin.com/in/trevor-gusmini/" target="_blank">LinkedIn</a>
+              <a href="https://www.linkedin.com/in/trevor-gusmini-9873812a2/" target="_blank">LinkedIn</a>
             </div>
           </div>
 
