--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           </div>
 
           <div class="member-card">
-            <img src="trev.png" alt="Trevor Gusmini" class="member-img">
+            <img src="trev.jpeg" alt="Trevor Gusmini" class="member-img">
             <div class="member-name">Trevor Gusmini</div>
             <div class="member-role">Head of Business Management</div>
             <div class="member-link">
