--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
       <div class="description-box">
         <p>
-          *Because care deserves care.*
+          <i>Because care deserves care.</i>
         </p>
       </div>
 
