--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
           </div>
 
           <div class="member-card">
+            <img src="sky.jpeg" alt="Sky Laurent-Kingsley" class="member-img">
             <div class="member-name">Sky Laurent-Kingsley</div>
             <div class="member-role">Chief Officer of Operations & Marketing</div>
             <div class="member-link">
