--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
           </div>
 
           <div class="member-card">
+            <img src="Omar.JPG" alt="Omar Dovesi" class="member-img">
             <div class="member-name">Omar Dovesi</div>
             <div class="member-role">Lead Machine Learning Engineer</div>
             <div class="member-link">
@@ -316,6 +317,7 @@
           </div>
 
           <div class="member-card">
+            <img src="Joey.JPG" alt="Joey Musalli" class="member-img">
             <div class="member-name">Joey Musalli</div>
             <div class="member-role">Lead Mechanical Engineer</div>
             <div class="member-link">
