--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
           </div>
 
           <div class="member-card">
+            <img src="Dylan.JPG" alt="Dylan MacIntyre" class="member-img">
             <div class="member-name">Dylan MacIntyre</div>
             <div class="member-role">Physical Rehabilitation Specialist</div>
           </div>
