--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
           </div>
 
           <div class="member-card">
+            <img src="Dario.jpg" alt="Dario Finocchiaro" class="member-img">
             <div class="member-name">Dario Finocchiaro</div>
             <div class="member-role">Lead Software Engineer</div>
             <div class="member-link">
@@ -308,7 +309,7 @@
           </div>
 
           <div class="member-card">
-            <img src="Omar.JPG" alt="Omar Dovesi" class="member-img">
+            <img src="Omar.jpg" alt="Omar Dovesi" class="member-img">
             <div class="member-name">Omar Dovesi</div>
             <div class="member-role">Lead Machine Learning Engineer</div>
             <div class="member-link">
