--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           </div>
 
           <div class="member-card">
-            <img src="max.PNG" alt="Maxwell Gleadow" class="member-img">
+            <img src="Max.jpg" alt="Maxwell Gleadow" class="member-img">
             <div class="member-name">Maxwell Gledow</div>
             <div class="member-role">Chief Technology Officer</div>
             <div class="member-link">
