--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
           </div>
 
           <div class="member-card">
+            <img src="Shrey.jpg" alt="Shreyans Jadhav" class="member-img">
             <div class="member-name">Shreyans Jadhav</div>
             <div class="member-role">Lead Electrical Engineer</div>
           </div>
